Completato evento FAD (ad eccezione del programma)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -310,7 +310,7 @@ label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
-label.crediti_formativi_attribuiti_dal_utente=Crediti formativi attribuiti dal''utente
+label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dal'utente
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
 label.cv=Curriculum vitae
@@ -376,7 +376,7 @@ label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
 label.docente=Docente
-label.docenti_relatori_tutor=Docenti/Relatori/Tutor
+label.docenti_relatori_tutor=Docenti / Relatori / Tutor
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
 label.documento_verifica_ricadute_formative=Allegato verifica ricadute formative
@@ -963,3 +963,12 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
+label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
+label.info_accesso_piattaforma=Accesso piattaforma FAD
+label.userId=User Id
+label.password=Password
+label.url=URL
+label.sponsors=Sponsors
+label.partners=Partners
+label.ore=Ore
