Programma FSC - Progetti di Miglioramento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -310,8 +310,8 @@ label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
-label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dal'utente
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
+label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dal'utente
 label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
 label.cv=Curriculum vitae
 label.da_inserire=(non inserito)
@@ -389,6 +389,7 @@ label.domande_accreditamento=Domande di Accreditamento
 label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
 label.domande_provvisorie=Domande Provvisorie
 label.domande_standard=Domande Standard
+label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
 label.durata=Durata
 label.elabora=Elabora
 label.elimina=Elimina
@@ -461,6 +462,7 @@ label.indicatore_efficacia=Indicatori per misurare l’efficacia formativa del p
 label.indietro=Indietro
 label.indirizzo=Indirizzo
 label.indirizzo_sede={0} ({1})
+label.info_accesso_piattaforma=Accesso piattaforma FAD
 label.info_account=Accedi all'area riservata
 label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
@@ -665,12 +667,15 @@ label.ora=Ora
 label.orario=Orario
 label.orario_fine=Orario Fine
 label.orario_inizio=Orario Inizio
+label.ore=Ore
 label.ore_attivita=Ore Attività
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.paga=Paga
 label.pagato=Pagato
 label.partita_iva=Partita IVA
+label.partners=Partners
+label.password=Password
 label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
 label.pec=PEC
@@ -798,6 +803,7 @@ label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
 label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
+label.selezionare_le_fasi_da_inserire=Selezionare le fasi che si desidera inserire
 label.settimana=settimana
 label.settoriale=Settoriale
 label.sezione=Sezione
@@ -811,6 +817,7 @@ label.solo_lingua_italiana=\u00C8 previsto solo l'uso della lingua italiana?
 label.sostituisci=Sostituisci
 label.sostituisci_anagrafica=Sostituzione Intera Anagrafica
 label.sostituto=Sostituto
+label.sponsors=Sponsors
 label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
@@ -821,6 +828,7 @@ label.stato_valutazione=Stato Valutazione
 label.status=Status
 label.straniera=Straniera
 label.straniero=Straniero
+label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
@@ -852,6 +860,8 @@ label.tutte_le_professioni=Tutte le Professioni/Discipline
 label.tutte_le_valutazioni=Mostra tutte le Valutazioni
 label.ultima_comunicazione_ricevuta=Ultima Comunicazione ricevuta: {0}
 label.ultimi_messaggi_ricevuti=Ultimi messaggi ricevuti ({0} di {1})
+label.url=URL
+label.userId=User Id
 label.username=Username
 label.utente=Utente
 label.utenti=Utenti
@@ -963,12 +973,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
-label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
-label.info_accesso_piattaforma=Accesso piattaforma FAD
-label.userId=User Id
-label.password=Password
-label.url=URL
-label.sponsors=Sponsors
-label.partners=Partners
-label.ore=Ore
