WIP gestione multi ruolicoinvolit in evento FSC

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -833,6 +833,7 @@ label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_dedicato=Tempo Dedicato
+label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
