Evento FSC calcolo riepilogo WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -207,6 +207,7 @@ label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
+label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
 label.allega=Allega
 label.allegati=Allegati
