--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -279,6 +279,7 @@ label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
 label.codice_identificativo=Codice Identificativo
+label.codifica=Codifica Ruolo XML
 label.cogeaps=Co.Ge.A.P.S.
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -311,6 +312,7 @@ label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
+label.crediti=Crediti ECM
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dal'utente
 label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
@@ -453,6 +455,7 @@ label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.id_provider=Id del Provider
+label.impegno_complessivo_ore=Impegno complessivo in ore
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
@@ -641,6 +644,7 @@ label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di R
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
+label.numero_partecipanti=Numero partecipanti
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
