Eventi completi nell'implementazione delle parti (ninete TODO in edit e show)
Algoritmo calcolo crediti e durata su tutti gli eventi

Riepilogo su tutti gli eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -296,6 +296,7 @@ label.comunicazioni=Comunicazioni
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.conferma=Conferma
+label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_password=Conferma Password
@@ -569,6 +570,8 @@ label.messaggio=Messaggio
 label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
 label.metodi_di_lavoro=Metodi di Lavoro
 label.metodologia_didattica=Metodologia Didattica
+label.metodologia_frontale=Metodologia Frontale
+label.metodologia_interattiva=Metodologia Interattiva
 label.metodologie_didattiche=Metodologie Didattiche
 label.mittente=Mittente
 label.modelli_allegato=Modelli di allegato
@@ -861,6 +864,9 @@ label.to_provider_multipli=A: destinatari multipli
 label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.torna_login=Torna alla pagina di login
+label.totale_ore=Totale ore
+label.totale_ore_frontali=Totale ore metodologie frontali 
+label.totale_ore_interattive=Totale ore metodologie interattive
 label.trova=Trova
 label.tutte="Tutte"
 label.tutte_le_professioni=Tutte le Professioni/Discipline
