Modifica Label Piano formativo Modulo 6

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -135,6 +135,9 @@ error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
+error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
+error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
+error.data_intermedia_res_non_valida=Le date intermedie devono essere comprese tra la data di inizio e la data di fine
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
@@ -201,6 +204,7 @@ label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
 label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
 label.accreditamento_validazione=Data validazione
+label.accreditamento_valutazione_segreteria=Data valutazione segreteria
 label.accreditato=Accreditato
 label.aggiorna=Aggiorna
 label.aggiorna_account=Aggiorna Account
@@ -567,7 +571,7 @@ label.menu_riepiloghi=Menù Riepiloghi
 label.mese=mese
 label.messaggi=Messaggi
 label.messaggio=Messaggio
-label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite da l'ente ECM
+label.messaggio_warning_no_piani_formativi=E' possibile inserire il Piano Formativo in linea con le tempistiche definite dall'ente accreditante
 label.metodi_di_lavoro=Metodi di Lavoro
 label.metodologia_didattica=Metodologia Didattica
 label.metodologia_frontale=Metodologia Frontale
@@ -692,6 +696,7 @@ label.permessi=Permessi
 label.persone=Persone
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
+label.piano_formativo_anno=Piano Formativo relativo all''anno {0}
 label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
@@ -783,6 +788,7 @@ label.ruoli=Ruoli
 label.ruoli_coinvolti=Ruoli coinvolti
 label.ruolo=Ruolo
 label.salva=Salva
+label.salva_bozza=Salva come bozza
 label.salva_modifiche=Salva Modifiche
 label.scadenza_valutazione=Data scadenza Valutazione
 label.scegli_file=Scegli file
@@ -942,6 +948,7 @@ message.errore_inserimento_numero_verbale=\u00C8 obbligatorio inserire il numero
 message.evento_elimitato=Evento eliminato con sucesso
 message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
+message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato con successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
@@ -986,8 +993,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.salva_bozza=Salva come bozza
-error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
-message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato con successo.
-error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
-error.data_intermedia_res_non_valida=Le date intermedie devono essere comprese tra la data di inizio e la data di fine
