Calcolo Costo e scadenza pagamento per gli Eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -341,6 +341,7 @@ label.data_creazione=Data Creazione
 label.data_fine=Data fine
 label.data_inizio=Data inizio
 label.data_invio=Data invio
+label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_ultima_modifica=Data Ultima Modifica
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
