--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -217,7 +217,7 @@ label.allegato=Allegato
 label.allegatoComunicazione=Inserisci Allegato
 label.allegatoRisposta=Inserisci Allegato
 label.allegato_autocertificazione_assenza_finanziamenti=Allegato autocertificazione assenza finanziamenti
-label.allegato_autocertificazione_assenza_finanziamenti=Autocertificazione relativa all'assenza di partecipazione finanziaria di imprese interessate agli alimenti per la prima infanzia
+label.allegato_autocertificazione_assenza_finanziamenti_sponsor=Autocertificazione relativa all'assenza di partecipazione finanziaria di imprese interessate agli alimenti per la prima infanzia
 label.allegato_autocertificazione_autorizzazione_ministero=Autocertificazione di autorizzazione del Ministero della Salute
 label.allegato_comunicazione=Allegato:
 label.allegato_contratti_accordi_convenzioni=Allegato Contratti Accordi Convenzioni
@@ -984,3 +984,15 @@ error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni
 message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato con successo.
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_intermedia_res_non_valida=Le date intermedie devono essere comprese tra la data di inizio e la data di fine
+error.pochi_partecipanti200=I partecipanti devono essere almeno più di 200
+error.troppi_partecipanti100=I partecipanti devono essere al massimo 100
+error.troppi_partecipanti200=I partecipanti devono essere al massimo 200
+error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
+error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
+error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
+error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
+error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
+error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
+error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della segreteria organizzativa non sono stati inseriti correttamente
+error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
+error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
