--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -130,16 +130,25 @@ engineering.test_mypay=Test MyPay
 error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
+error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
+error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
+error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
+error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della segreteria organizzativa non sono stati inseriti correttamente
+error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
+error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
+error.data_fine_fsc_non_valida=La data di fine dell'evento non può essere compresa nello stesso anno solare della data di inizio
+error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
 error.data_intermedia_res_non_valida=Le date intermedie devono essere comprese tra la data di inizio e la data di fine
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
+error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
 error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
 error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
@@ -159,6 +168,7 @@ error.note_obbligatorie=In caso di valutazione negativa è necessario compilare 
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
+error.numero_massimo_giorni_evento_fsc730=L'evento non può avere una durata superiore ai 730 giorni
 error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
@@ -170,14 +180,20 @@ error.ora_non_valida2=Ora non valida! La Seduta non può essere inserita in un o
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
+error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
 error.same_password=Si prega di inserire una nuova password
 error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
 error.select=selezionare almeno un valore
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
+error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
 error.stato_elaborazione_cogeaps=Errore imprevisto urante la richiesta di stato elaborazione al Co.Ge.A.P.S.
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
+error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
+error.troppi_partecipanti200=Il numero massimo di partecipanti per questa tipologia di evento è di 200 partecipanti
+error.troppi_partecipanti25=Il numero massimo di partecipanti per questa tipologia di evento è di 25 partecipanti
+error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 error.xml_evento_validation_with_db=Validazione dati evento fallita
@@ -872,7 +888,7 @@ label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.torna_login=Torna alla pagina di login
 label.totale_ore=Totale ore
-label.totale_ore_frontali=Totale ore metodologie frontali 
+label.totale_ore_frontali=Totale ore metodologie frontali
 label.totale_ore_interattive=Totale ore metodologie interattive
 label.trova=Trova
 label.tutte="Tutte"
@@ -994,15 +1010,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-error.pochi_partecipanti200=I partecipanti devono essere almeno più di 200
-error.troppi_partecipanti100=I partecipanti devono essere al massimo 100
-error.troppi_partecipanti200=I partecipanti devono essere al massimo 200
-error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
-error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
-error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
-error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
-error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
-error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
-error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della segreteria organizzativa non sono stati inseriti correttamente
-error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
-error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
