--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -975,7 +975,7 @@ message.inserire_il_rendiconto=Inserire il file da elaborare!
 message.inserito=Il {0} è stato salvato con successo.
 message.invio_cogeaps_ok=Il report è stato inviato con successo
 message.invio_integrazione_success=Integrazione della Domanda di Accreditamento effettuata con successo.
-message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
+message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale e al delegato del Legale Rappresentante.
 message.mail_inviata=Email inviata
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
