--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -141,6 +141,7 @@ error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
+error.data_fine_fad_non_valida=La data di fine dell'evento non può essere compresa nello stesso anno solare della data di inizio
 error.data_fine_fsc_non_valida=La data di fine dell'evento non può essere compresa nello stesso anno solare della data di inizio
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
@@ -159,6 +160,7 @@ error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare s
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
 error.invalid=formato non corretto
 error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
+error.mancano_spunte_radio_verifica_apprendimento_fad=Controllare di aver spuntato correttamente le modalita di verifica dell'apprendimento
 error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
 error.min=valore troppo corto
@@ -168,11 +170,13 @@ error.note_obbligatorie=In caso di valutazione negativa è necessario compilare 
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
+error.numero_massimo_giorni_evento_fad365=L'evento non può avere una durata superiore ai 365 giorni
 error.numero_massimo_giorni_evento_fsc730=L'evento non può avere una durata superiore ai 730 giorni
 error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
+error.numero_partecipanti_non_valido=Il numero dei partecipanti deve essere compreso tra 1 e 100000
 error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
