realizzato import eventi piano formativo da CSV

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -134,6 +134,7 @@ error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sist
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
+error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
@@ -144,6 +145,7 @@ error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
+error.formatNonAcceptedCSV=Errore nel formato del file. \u00C8 consentito inviare solo file CSV
 error.formatNonAcceptedXML=Errore nel formato del file. \u00C8 consentito inviare solo file XML, P7M e CSV
 error.invalid=formato non corretto
 error.invio_report_cogeaps=Errore durante l'invio del report al Co.Ge.A.P.S.
@@ -451,6 +453,7 @@ label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.id_provider=Id del Provider
+label.importEventiDaCsvFile=Importazione eventi da CSV
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
