--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -341,7 +341,7 @@ label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
 label.crediti=Crediti ECM
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
-label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dal'utente
+label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dall'utente
 label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
 label.cv=Curriculum vitae
 label.da_inserire=(non inserito)
