--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -131,6 +131,7 @@ error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
+error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della segreteria organizzativa non sono stati inseriti correttamente
@@ -483,8 +484,8 @@ label.home=Torna alla Home
 label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.id_provider=Id del Provider
-label.importEventiDaCsvFile=Importazione eventi da CSV
 label.impegno_complessivo_ore=Impegno complessivo in ore
+label.importEventiDaCsvFile=Importazione eventi da CSV
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
