--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -637,6 +637,7 @@ label.nessun_file_caricato=Nessun File caricato
 label.nessun_file_generato=Nessun File generato
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_messaggio_non_letto=Nessun messaggio ancora da leggere
+label.nessun_pagamento_trovato=Nessun Pagamento Trovato
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
 label.nessun_responsabile_registrato=Nessun Responsabile Registrato
@@ -709,7 +710,9 @@ label.ore=Ore
 label.ore_attivita=Ore Attività
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
+label.pagInCorso=Pagamento in corso
 label.paga=Paga
+label.pagamenti_annuali=Pagamenti Annuali
 label.pagato=Pagato
 label.partita_iva=Partita IVA
 label.partners=Partners
