--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -131,6 +131,11 @@ error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
+error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - almeno una figura partecipante per azione
+error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione \n - almeno una figura partecipante per azione
+error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione \n - almeno una figura tutor e una partecipante per azione \n - minimo 1 ora non frazionabile per le figure partecipante
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
@@ -143,8 +148,6 @@ error.componente_presente=\u00C8 già presente questo Componente nel Comitato Sc
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
 error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
-error.data_fine_fad_non_valida=La data di fine dell'evento non può essere compresa nello stesso anno solare della data di inizio
-error.data_fine_fsc_non_valida=La data di fine dell'evento non può essere compresa nello stesso anno solare della data di inizio
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
