corretti minor bug, FAD programma fetch EAGER, validatore FAD finito

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -136,6 +136,7 @@ error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi dell
 error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
 error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione \n - almeno una figura partecipante per azione
 error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione \n - almeno una figura tutor e una partecipante per azione \n - minimo 1 ora non frazionabile per le figure partecipante
+error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_partner=Alcuni campi dei partner segnati in rosso non sono stati inseriti correttamente
