--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -161,6 +161,12 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
+error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0
+error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore
+error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 e minore di 25 \n - l'impegno complessivo sia almeno di 8 ore
+error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore
+error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0
+error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
 error.formatNonAcceptedCSV=Errore nel formato del file. \u00C8 consentito inviare solo file CSV
@@ -199,6 +205,7 @@ error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata
 error.select=selezionare almeno un valore
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
+error.solo_pause_programma_res=Il programma non può essere composto di sole pause, inserire almeno un'attività
 error.stato_elaborazione_cogeaps=Errore imprevisto urante la richiesta di stato elaborazione al Co.Ge.A.P.S.
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
