abbozzata attuazione evento piano formativo (WIP)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -282,6 +282,7 @@ label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
+label.attua=Attua
 label.attuazione_evento=Attuazione
 label.autorizzazione_privacy=Dichiaro ai sensi e per gli effetti del D.lgs. n. 196/2003, di essere in possesso del consenso scritto alla pubblicazione dei dati personali da parte dei soggetti
 label.avanti=avanti
