sistemati controlli validazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -200,6 +200,7 @@ error.password_repeat=la password non coincide
 error.pochi_partecipanti200=Il numero minimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.professioni_non_conformi_con_accreditamento=Le professioni dei Componenti del Comitato Scientifico non sono conformi con le professioni dell''Accreditamento
 error.repeat=non corrisponde
+error.risultato_atteso_non_utilizzato=Risultato atteso non utilizzato
 error.same_password=Si prega di inserire una nuova password
 error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
 error.select=selezionare almeno un valore
@@ -226,10 +227,12 @@ label.abilita_modifica_campi=Abilita modifica ai campi
 label.abilita_modifica_campi_evento=Abilita modifica ai campi dell''evento {0}
 label.abilitato=Abilitato
 label.accedi=Accedi
+label.accredita=Accredita
 label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
 label.accreditamenti_lista_gruppo=Lista Domande di accreditamento {0}
 label.accreditamento=Accreditamento
+label.accreditamento_evento_piano_formativo=Accreditamento Evento {0} dal Piano Formativo
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
 label.accreditamento_nome=Nome
@@ -621,6 +624,8 @@ label.modifica_comitato=Inserimento/rimozione di componenti
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_eventi=Inserimento/rimozione di eventi
 label.modifica_evento=Modifica evento
+label.modifica_evento_accreditato=Modifica Evento {0} Accreditato dal Piano Formativo
+label.modifica_evento_tipo=Modifica Evento {0}
 label.modifica_profilo=Modifica Profilo
 label.modifica_sede_legale=Modifica Sede Legale
 label.modifica_sede_operativa=Modifica Sede Operativa
@@ -808,6 +813,7 @@ label.richiesta_standard_accreditamento=Richiesta di accreditamento Standard
 label.richieste_accreditamento=Richieste di accreditamento
 label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
+label.riedita=Riedita
 label.riedizione_evento=Riedizione
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_evento=Riepilogo dell''Evento {0}
@@ -879,6 +885,7 @@ label.stato_account=Stato Account
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
 label.stato_inserimento=Stato Inserimento
+label.stato_pagamento=Stato pagamento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
 label.straniera=Straniera
