info richieste + mod css

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1040,3 +1040,7 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.info_sede_programmaRES=Il campo relativo alla sede di svolgimento dell’evento deve essere modificato solo nel caso in cui la sede sia diversa da quanto indicato nella sezione 1
+label.info_sponsor_evento=Il Provider dichiara che i contratti sono disponibili presso la propria sede e si impegna ad allegarli entro 90 giorni dalla data di fine dell’evento al fine di procedere alla rendicontazione
+label.info_partner_evento=Per Partner si intende un ente/organizzazione che apporti un qualsiasi contributo scientifico e/o organizzativo all’attività di formazione realizzata dal Provider senza richiedere uno specifico corrispettivo come ad esempio spazi pubblicitari per la promozione del proprio marchio. \n Nessun soggetto che produca, distribuisca, commercializzi e pubblicizzi prodotti farmaceutici, omeopatici, fitoterapici, dietetici, dispositivi e strumenti medici può assumere il ruolo di Partner di un Provider ECM.I patrocini (es. Regione, Comune, Ordini/Collegi etc.) se accordati NON vanno dichiarati sotto la voce “Partner” e possono essere indicati oltre che nelle locandine dell’evento anche  sull’attestato dei crediti formativi
+label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
