cambiate label obiettivo formativo -> strategico

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -455,7 +455,7 @@ label.eventi=Eventi
 label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
 label.evento_contenuti=Contenuti dell'evento
-label.evento_contiene_questi_contenuti=L'evento formativo prevedere i seguenti contenuti?
+label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
 label.evento_sponsorizzato_infanzia_radio=L’evento è sponsorizzato da aziende che trattano alimenti per la prima infanzia?
@@ -712,6 +712,8 @@ label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
 label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
+label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
+label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
 label.oggetto_list=Oggetto
