--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -261,7 +261,7 @@ label.allegato_autocertificazione_assenza_finanziamenti=Allegato autocertificazi
 label.allegato_autocertificazione_assenza_finanziamenti_sponsor=Autocertificazione relativa all'assenza di partecipazione finanziaria di imprese interessate agli alimenti per la prima infanzia
 label.allegato_autocertificazione_autorizzazione_ministero=Autocertificazione di autorizzazione del Ministero della Salute
 label.allegato_comunicazione=Allegato:
-label.allegato_contratti_accordi_convenzioni=Allegato Contratti Accordi Convenzioni
+label.allegato_contratti_accordi_convenzioni=Contratti o accordi di altre forme di finanziamento
 label.allegato_non_inserito=Allegato non inserito
 label.allegato_risposta=Allegato:
 label.altro_personale=Altro personale
@@ -357,8 +357,8 @@ label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
 label.crediti=Crediti ECM
 label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
-label.crediti_formativi_attribuiti_utente=Crediti formativi attribuiti dall'utente
-label.crediti_formativi_proposti_dal_sistema=Crediti formativi proposti dal sistema
+label.crediti_formativi_attribuiti_utente=Crediti ECM attribuiti dal Provider
+label.crediti_formativi_proposti_dal_sistema=Crediti ECM proposti dal sistema
 label.cv=Curriculum vitae
 label.da_inserire=(non inserito)
 label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
@@ -421,9 +421,11 @@ label.dichiarazione_assenza_conflitto_interesse=Dichiarazione di assenza di conf
 label.diniego=Diniego
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
+label.discipline=Discipline
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
 label.docente=Docente
-label.docenti_relatori_tutor=Docenti / Relatori / Tutor
+label.docente_tutor=Docente / Tutor
+label.docenti_relatori_tutor=Docente / Relatore / Tutor
 label.documenti=Documenti
 label.documenti_della_domanda=Documenti della Domanda di Accreditamento
 label.documento_verifica_ricadute_formative=Allegato verifica ricadute formative
@@ -438,6 +440,7 @@ label.domande_provvisorie=Domande Provvisorie
 label.domande_standard=Domande Standard
 label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
 label.durata=Durata
+label.durata_impegno_studio=Durata / Impegno studio
 label.elabora=Elabora
 label.elimina=Elimina
 label.email=E-mail
@@ -517,9 +520,13 @@ label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo app
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
+label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
+label.info_partner_evento=Per Partner si intende un ente/organizzazione che apporti un qualsiasi contributo scientifico e/o organizzativo all’attività di formazione realizzata dal Provider senza richiedere uno specifico corrispettivo come ad esempio spazi pubblicitari per la promozione del proprio marchio. \n Nessun soggetto che produca, distribuisca, commercializzi e pubblicizzi prodotti farmaceutici, omeopatici, fitoterapici, dietetici, dispositivi e strumenti medici può assumere il ruolo di Partner di un Provider ECM.I patrocini (es. Regione, Comune, Ordini/Collegi etc.) se accordati NON vanno dichiarati sotto la voce “Partner” e possono essere indicati oltre che nelle locandine dell’evento anche  sull’attestato dei crediti formativi
 label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.info_sede_programmaRES=Il campo relativo alla sede di svolgimento dell’evento deve essere modificato solo nel caso in cui la sede sia diversa da quanto indicato nella sezione 1
+label.info_sponsor_evento=Il Provider dichiara che i contratti sono disponibili presso la propria sede e si impegna ad allegarli entro 90 giorni dalla data di fine dell’evento al fine di procedere alla rendicontazione
 label.info_tooltip_numero_partecipanti_fsc=Vincolo di 1 tutor per massimo 5 partecpanti. \n (1 tutor, massimo 5 partecipanti) \n (2 tutor, massimo 10 partecipanti)
 label.info_tooltip_obiettivo_nazionale=OBIETTIVI FORMATIVI TECNICO-PROFESSIONALI: finalizzati allo sviluppo delle competenze e delle conoscenze tecnico professionali individuati nel settore specifico di attività, acquisendo crediti formativi inerenti eventi specificatamente rivolti alla professione o alla disciplina di appartenenza. \n \n OBIETTIVI FORMATIVI DI PROCESSO: finalizzati allo sviluppo delle competenze e delle conoscenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità efficienza, efficacia, appropriatezza e sicurezza degli specifici processi di produzione delle attività sanitarie. Questi obiettivi si rivolgono dunque ad operatori ed équipe che intervengono in un determinato segmento di produzione. \n \n OBIETTIVI FORMATIVI DI SISTEMA: finalizzati allo sviluppo delle conoscenze e competenze nelle attività e nelle procedure idonee a promuovere il miglioramento della qualità, efficienza, efficacia, appropriatezza e sicurezza dei sistemi sanitari. Questi obiettivi si rivolgono, di norma, a tutti gli operatori avendo quindi caratteristiche interprofessionali.
 label.informazioni_sede=Informazioni relative alla Sede dell'Evento
@@ -758,6 +765,7 @@ label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della
 label.procedure_formative=Tipologie evento
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
+label.professioni=Professioni
 label.professioniAccreditamento=Accreditamento per professioni
 label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_discipline=Professioni / Discipline
@@ -907,7 +915,7 @@ label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.tipologia_list=Tipologia
-label.tipologia_obiettivi_formativi=Tipologia di obiettivi formativi
+label.tipologia_obiettivi_formativi=Obiettivi formativi
 label.tipologia_sede=Tipologia Sede
 label.titolare=Titolare
 label.titolo=Titolo
@@ -1042,7 +1050,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.info_sede_programmaRES=Il campo relativo alla sede di svolgimento dell’evento deve essere modificato solo nel caso in cui la sede sia diversa da quanto indicato nella sezione 1
-label.info_sponsor_evento=Il Provider dichiara che i contratti sono disponibili presso la propria sede e si impegna ad allegarli entro 90 giorni dalla data di fine dell’evento al fine di procedere alla rendicontazione
-label.info_partner_evento=Per Partner si intende un ente/organizzazione che apporti un qualsiasi contributo scientifico e/o organizzativo all’attività di formazione realizzata dal Provider senza richiedere uno specifico corrispettivo come ad esempio spazi pubblicitari per la promozione del proprio marchio. \n Nessun soggetto che produca, distribuisca, commercializzi e pubblicizzi prodotti farmaceutici, omeopatici, fitoterapici, dietetici, dispositivi e strumenti medici può assumere il ruolo di Partner di un Provider ECM.I patrocini (es. Regione, Comune, Ordini/Collegi etc.) se accordati NON vanno dichiarati sotto la voce “Partner” e possono essere indicati oltre che nelle locandine dell’evento anche  sull’attestato dei crediti formativi
-label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
