nuovo calcolo partecipanti FSC + modifiche varie post demo 03/11
(manca solo da convertire ore in min durata)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -161,11 +161,11 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
-error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0
-error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore
-error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 e minore di 25 \n - l'impegno complessivo sia almeno di 8 ore
-error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore
-error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0
+error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo
+error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore
+error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 e minore di 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo
+error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore
+error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
@@ -212,6 +212,7 @@ error.stessoCf=il delegato del legale rappresentante non può avere lo stesso co
 error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
 error.troppi_partecipanti200=Il numero massimo di partecipanti per questa tipologia di evento è di 200 partecipanti
 error.troppi_partecipanti25=Il numero massimo di partecipanti per questa tipologia di evento è di 25 partecipanti
+error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapporto 5 Partecipanti per Tutor
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
