Modifica pulsanti nuovo evento in eventoList

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -273,6 +273,7 @@ label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
 label.anche_operativa= e Operativa
 label.anno=Anno {0}
+label.anno_riferimento=Anno Riferimento
 label.annulla=Annulla
 label.aperta=Aperta
 label.applica=Applica
@@ -553,6 +554,7 @@ label.inserisci_partner=Inserisci Partner
 label.inserisci_pausa=Inserisci Pausa
 label.inserisci_persona=Inserisci Persona
 label.inserisci_piano_formativo=Inserisci Piano Formativo
+label.inserisci_relazione_annuale=Inserisci Relazione Annuale
 label.inserisci_sponsor=Inserisci Sponsor
 label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
@@ -611,6 +613,7 @@ label.lista_eventi_provider=Lista degli Eventi del Provider {0}
 label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
+label.lista_relazioni_annuali=Elenco Relazioni Annuali
 label.lista_sedute=Gestione Sedute
 label.lista_valutatori=Lista dei Valutatori
 label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
@@ -676,6 +679,7 @@ label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
 label.nessuna_persona=Nessuna persona disponibile
+label.nessuna_relazione_annuale_list=Nessuna Relazione Annuale inserita
 label.nessuna_rendicontazione_inviata=Nessuna rendicontazione inviata
 label.nessuna_risposta=Nessuna risposta
 label.nessuna_sede=Nessuna sede inserita
@@ -719,6 +723,7 @@ label.nuova_password=Nuova Password
 label.nuova_risposta=Nuova Risposta
 label.nuovo=Nuovo
 label.nuovo_evento=Nuovo Evento
+label.nuovo_evento_da_pfa=Nuovo evento da PFA
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
