--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -265,6 +265,7 @@ label.allegato_comunicazione=Allegato:
 label.allegato_contratti_accordi_convenzioni=Contratti o accordi di altre forme di finanziamento
 label.allegato_non_inserito=Allegato non inserito
 label.allegato_risposta=Allegato:
+label.altri_finanziamenti=Altre forme di Finanziamento
 label.altro_personale=Altro personale
 label.ambito=Ambito:
 label.ambito_list=Ambito
@@ -351,6 +352,7 @@ label.contratto=Contratto
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
+label.costi_totali_eventi=Costi Totali Eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
 label.creazione_evento=Creazione
@@ -459,6 +461,9 @@ label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
+label.eventi_definitivi_da_pfa_anno=Numero eventi definitivi provenienti dal PFA
+label.eventi_inseriti_pfa_anno=Numero eventi inseriti nel PFA
+label.eventi_manuali_defintivi_anno=Numero eventi manuali definitivi (escluso riedizioni)
 label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
 label.evento_contenuti=Contenuti dell'evento
@@ -540,6 +545,7 @@ label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cu
 label.inserimento_numero_verbale=Inserire il numero del Verbale della Seduta
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
+label.inserimento_relazione_annuale=Inserimento Relazione Annuale {0}
 label.inserimento_rendicontazione=Inserimento Rendicontazione
 label.inserimento_sede=Inserimento Sede
 label.inserimento_seduta=Inserimento nuova Seduta
@@ -641,6 +647,7 @@ label.modifica_evento=Modifica evento
 label.modifica_evento_accreditato=Modifica Evento {0} Accreditato dal Piano Formativo
 label.modifica_evento_tipo=Modifica Evento {0}
 label.modifica_profilo=Modifica Profilo
+label.modifica_relazione_annuale=Modifica Relazione Annuale {0}
 label.modifica_sede_legale=Modifica Sede Legale
 label.modifica_sede_operativa=Modifica Sede Operativa
 label.modifica_sedi=Inserimento/rimozione di sedi
@@ -713,6 +720,7 @@ label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
+label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
@@ -794,7 +802,13 @@ label.provincia=Provincia
 label.pubblica=Pubblica
 label.qualifica=Qualifica
 label.quota_partecipazione=Quota di partecipazione
+label.quote_di_partecipazione=Quote di partecipazione
 label.ragione_sociale=Ragione sociale
+label.rapportoAttuazione=Rapporto attuazione
+label.rapporto_costi_entrate=Rapporto Costi/Ricavi
+label.rapporto_economico=Rapporto Economico
+label.rapporto_eventi=Rapporto Eventi
+label.rapporto_obiettivi_regionali=Percentuale di eventi con Obiettivi Regionali
 label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
@@ -804,6 +818,8 @@ label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
+label.relazione_annuale_anno=Relazione Annuale {0}
+label.relazioneFinale=Relazione Finale
 label.rendicontazione_inviata=Rendicontazione inviata
 label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
@@ -812,6 +828,11 @@ label.reportPartecipantiXML=File XML
 label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
 label.required_fatturato_personale_sanitario=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato del personale sanitario nella sezione Dati Accreditamento)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
+label.resoconti_eventi=Resoconti Eventi
+label.resoconto_discipline=Resoconto Discipline Eventi
+label.resoconto_obiettivi=Resoconto Obiettivi Eventi
+label.resoconto_obiettivi_regionali=Resoconto Obiettivi Regionali Eventi
+label.resoconto_professioni=Resoconto Professioni Eventi
 label.responsabile=Responsabile
 label.responsabile_amministrativo=Responsabile Amministrativo
 label.responsabile_qualita=Responsabile della Qualità
@@ -821,6 +842,7 @@ label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
+label.ricavi_da_sponsor=Ricavi da Sponsorizzazioni
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
