--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -723,8 +723,8 @@ label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
 label.obiettivo_formativo=Obiettivo Formativo
-label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
-label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
+label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
+label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
 label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
 label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
