Relazione Annuale finita - manca thread per aggiornamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -817,9 +817,9 @@ label.referee=Referee
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
+label.relazioneFinale=Relazione Finale
 label.relazione_annuale=Relazione Annuale
 label.relazione_annuale_anno=Relazione Annuale {0}
-label.relazioneFinale=Relazione Finale
 label.rendicontazione_inviata=Rendicontazione inviata
 label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
@@ -1056,6 +1056,7 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
+message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
 message.risposta_inviata=Risposta inviata con successo.
 message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
