--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -449,6 +449,7 @@ label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
 label.elabora=Elabora
 label.elimina=Elimina
+label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
 label.email=E-mail
 label.enabled=Abilitato
 label.error=Errore
@@ -478,6 +479,7 @@ label.eventofsc_ottenutoComitatoEtico=Ottenuto il parere del comitato etico?
 label.eventofsc_sperimentazioneClinica=Sperimentazione Clinica
 label.eventofsc_tipologiaGruppo=Tipologia gruppo
 label.facoltativo=facoltativo
+label.faq=Faq
 label.fase=Fase
 label.fasi=Fasi
 label.fasi_azioni_ruoli=Fasi/Azioni/Ruoli coinvolti
@@ -512,7 +514,7 @@ label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.id_provider=Id del Provider
 label.impegno_complessivo_ore=Impegno complessivo in ore
-label.importEventiDaCsvFile=Importazione eventi da CSV
+label.importEventiDaCsvFile=Importa Piano Formativo da CSV
 label.importo=Importo
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
@@ -772,6 +774,7 @@ label.piano_formativo=Piano Formativo
 label.piano_formativo_anno=Piano Formativo relativo all''anno {0}
 label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
 label.piva=PIVA
+label.portale=Portale
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carico
