Modifca per gruupo A e allegato facoltativo in eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -272,6 +272,8 @@ label.ambito_list=Ambito
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
 label.anagrafiche_provider=Anagrafiche del provider
+label.anagrafiche_ruoli_eventi=Anagrafiche Ruoli Eventi
+label.anagrafiche_ruoli_provider=Anagrafiche Ruoli Provider
 label.anche_operativa= e Operativa
 label.anno=Anno {0}
 label.anno_riferimento=Anno Riferimento
