modifiche al canale (working progress)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -387,6 +387,7 @@ label.data_invio=Data invio
 label.data_pagamento=Data Pagamento
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_ultima_modifica=Data Ultima Modifica
+label.data_ultima_risposta=Data ultima risposta
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
@@ -931,6 +932,7 @@ label.stato_inserimento=Stato Inserimento
 label.stato_pagamento=Stato pagamento
 label.stato_valutazione=Stato Valutazione
 label.status=Status
+label.storico=in storico
 label.straniera=Straniera
 label.straniero=Straniero
 label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
@@ -1022,6 +1024,7 @@ message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzat
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
 message.completato=Operazione effettuata!
 message.componente_comitato_eliminato=Componente del Comitato Scientifico eliminato
+message.comunicazione_chiusa=La Comunicazione è stata chiusa con successo.
 message.comunicazione_inviata=Comunicazione inviata con successo.
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
