modifica comunicazioni (WIP), account getFullName() per segreteria

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -712,6 +712,7 @@ label.nome_partner=Nome del partner
 label.nome_sponsor=Nome dello sponsor
 label.nome_utente=Nome Utente
 label.non_abilitato=Non abilitato
+label.non_ancora_lette=non ancora lette
 label.non_effettuata_consecutivamente=Non effettuata (consecutivamente)
 label.non_effettuate_consecutivamente=Non effettuate (consecutivamente)
 label.non_ha_pagato_quota_annuale=Non ha pagato la quota annuale
